--- a/content/policies.mdx
+++ b/content/policies.mdx
@@ -6,7 +6,7 @@ metaDescription: "Important University and Faculty policies"
 
 ## Course drop date
 
-March 1st, 2021 is the final date to drop Winter 2021 session courses without academic penalties. Click [here](https://bloomberg.nursing.utoronto.ca/current-students/sessional-dates-and-calendar#content2) for drop dates for 2020-21 courses.
+Sunday, February 20, 2022 is the final date to drop Winter 2022 session courses without academic penalties. For sessional dates for 2021-22 visit: https://bloomberg.nursing.utoronto.ca/current-students/sessional-dates-and-calendar#content2.
 
 
 ## Grading of Written Assignments
@@ -20,7 +20,7 @@ Late assignments after the due date will accrue a late penalty of 5% each day (i
 
 For Online Courses: 
 
-On the due date, please submit an electronic copy of your paper/assignment to the digital drop box in Turnitin using Quercus.  Your paper/assignment will NOT be evaluated until it is submitted to Turnitin using Quercus. 
+On the due date, please submit an electronic copy of your paper/assignment to the digital drop box linked to Ouriginal through Quercus. Your paper/assignment will NOT be evaluated until it is submitted to Ouriginal using Quercus. 
 
 
 
@@ -36,7 +36,9 @@ In the interest of fairness and transparency, please direct your questions about
 
 ## Plagiarism & Academic Integrity
 
-Turnitin is used in this course. Normally, students will be required to submit their course assignments to Turnitin.com for a review of textual similarity and detection of possible plagiarism. In doing so, students will allow their assignments to be included as source documents in the Turnitin.com reference database, where they will be used solely for the purpose of detecting plagiarism. The terms that apply to the University's use of the Turnitin.com service are described on the Turnitin.com web site. Students do have the option of handing in all their rough drafts and notes of their paper if they are opposed using to Turnitin. These students must approach their faculty teacher(s) in advance.
+Ouriginal is used in this course. Normally, students will be required to submit their course assignments to the University’s plagiarism detection tool (Ouriginal) for a review of textual similarity and detection of possible plagiarism. In doing so, students will allow their assignments to be included as source documents in the tool’s (Ouriginal) reference database, where they will be used solely for the purpose of detecting plagiarism. The terms that apply to the University's use of the Ouriginal service are described on the Centre for Teaching Support and Innovation website (https://uoft.me/pdt-faq). 
+
+Students do have the option of handing in all their rough drafts and notes of their paper/assignment if they are opposed to using Ouriginal. These students must approach their faculty teacher(s) in advance. 
 
 Academic integrity is essential to the pursuit of learning and scholarship in a university, and to ensuring that a degree from the University of Toronto is a strong reflection of each student’s individual academic achievement.
 
@@ -84,29 +86,30 @@ The <a target="_blank" href="http://healthandwellness.utoronto.ca/">Health & Wel
 
 Student evaluation of courses is an essential component of our educational programs at the Lawrence S. Bloomberg Faculty of Nursing. Student feedback enables us to continue to improve our teaching effectiveness to enhance student learning.
 
-The Lawrence S. Bloomberg Faculty of Nursing participates in the University of Toronto’s centralized ‘Student Evaluation of Courses’ system. Towards the end of this course, you will receive an email inviting you to complete an online evaluation of this course. The email will provide you with the specific information and links needed to access and complete course evaluation. Your ratings and comments will be anonymous but will be aggregated for summary across evaluations. Once a process has been established, summarized course evaluations will be made available within the faculty and university community. For more information about the University of Toronto policy about student evaluation of courses, please refer to the
-
-<a
-  target="_blank"
-  href="http://www.governingcouncil.utoronto.ca/Assets/Governing+Council+Digital+Assets/Policies/PDF/ProvostiaStudentEval.pdf"
->
-  website
-</a>
-.
+The Lawrence S. Bloomberg Faculty of Nursing participates in the University of Toronto’s centralized ‘Student Evaluation of Courses’ system. Towards the end of this course, you will receive an email inviting you to complete an online evaluation of this course. The email will provide you with the specific information and links needed to access and complete course evaluation. Your ratings and comments will be anonymous but will be aggregated for summary across evaluations. Once a process has been established, summarized course evaluations will be made available within the faculty and university community. For more information about the University of Toronto policy about student evaluation of courses, please refer to the [website](http://www.governingcouncil.utoronto.ca/Assets/Governing+Council+Digital+Assets/Policies/PDF/ProvostiaStudentEval.pdf).
 
 ## Technical Requirements for Online Academic Activities
 
 There are technical requirements that will allow you to participate in the course. The course includes online webinars, online examinations, and assignments that are submitted online.
 
-- Minimum Recommended Computer System Requirements
-- Laptop or Desktop 4GB Ram Windows 10 or Mac OSX 10.12
-- Screen Resolution of 1280 x 720 Webcam Headphones Microphone (Built-in, on headphones, or external) DSL or Cable Internet with 1.5 Mbps upload and download
+Minimum Recommended Computer System Requirements:
+
+- Laptop or Desktop 
+- 4GB Ram 
+- Windows 10 or Mac OSX 10.12
+- Screen Resolution of 1280 x 720 
+- Webcam 
+- Headphones 
+- Microphone (Built-in, on headphones, or external) 
+- DSL or Cable Internet with 1.5 Mbps upload and download
 
 If you have purchased your computer within the last 3-5 years you will likely have no trouble meeting these requirements. If your computer does not meet the minimum requirements you may have difficulty using some of the applications.
 
-You will need the webcam to enable online proctoring for any proctored examinations. For proctored examinations we use the Proctor U service and technical requirements for that service can be found <a target="_blank" href="https://www.proctoru.com/auto-resource-center">here</a>. Most new laptops (within 3-5 years) have webcams built in. If you are using a desktop computer you may need to purchase a webcam. In addition, you will need a microphone (most webcams and laptops have built-in microphones) and a set of headphones such as the kind that come with mobile devices and smartphones.
+For proctored examinations we use the ProctorU® service and technical requirements for that service can be found here: https://www.proctoru.com/auto-resource-center 
 
-In addition to the computer system requirements it is also recommended you have sufficiently fast Internet. Ensure you have DSL or Cable Internet with at least 1.5 Mbps download speed and at least 1.5 Mbps upload speed. Dial-up Internet is not recommended.
+Most new laptops (within 3-5 years) have webcams built in. If you are using a desktop computer you may need to purchase a webcam. In addition, you will need a microphone (most webcams and laptops have built-in microphones) and a set of headphones such as the kind that come with mobile devices and smartphones.
+
+In addition to the computer system requirements it is also recommended you have sufficiently fast Internet. Ensure you have DSL or Cable Internet with at least 10 Mbps download speed and at least 10 Mbps upload speed. Dial-up Internet is not recommended.
 You can test your Internet speed by going to <a target="_blank" href="https://www.speedtest.net/">this website</a> and clicking “Go”.
 
 In addition, it is important to note that some computer applications may be required to communicate throughout this course. Ensure you have:
@@ -114,11 +117,9 @@ In addition, it is important to note that some computer applications may be requ
 - A PDF Reader (Adobe Reader, Preview, etc.)
 - Word Processing Software (ie. Microsoft Office available free from U of T)
 - Two web browsers (Firefox and Chrome are recommended)
-- An updated Adobe Flashplayer as some systems still use this legacy product
 
 Please note: If you are accessing the Internet through a large organization or using a work computer (e.g. a hospital) you may need to contact your organization’s IT department to arrange these downloads and confirm internet speed.
 
-Please note, the university also provides free <a target="_blank" href="http://antivirus.utoronto.ca/index.php?page=students">antivirus software</a> to all students which is strongly recommended.
 
 ## Notice of video recording and sharing (including permissible download; prohibited re-use)
 
@@ -130,4 +131,23 @@ For questions about recording and use of videos in which you appear please conta
 
 ## Equity, Diversity, and Inclusion
 
-The University of Toronto is committed to equity, human rights and respect for diversity. All members of the learning environment in this course should strive to create an atmosphere of mutual respect where all members of our community can express themselves, engage with each other, and respect one another’s differences. U of T does not condone discrimination or harassment against any persons or communities.
+The University of Toronto is committed to equity, human rights and respect for diversity.  All members of the learning environment in this course should strive to create an atmosphere of mutual respect where all members of our community can express themselves, engage with each other, and respect one another’s differences. U of T does not condone discrimination or harassment against any persons or communities.
+
+“Students are reminded of the expectation that we all demonstrate respect for one another. As outlined in the Student Code of Conduct, the University of Toronto does not condone discrimination or harassment against any persons or communities especially when based on grounds protected under the Ontario Human Rights Code. The University of Toronto recognizes its commitment to human rights, equity and inclusion and acknowledges the disproportionate impact COVID-19 has on various parts of our community.  COVID-19 is not isolated to people of any particular ethnic origin, place of origin or race. Equity, diversity and respect must remain integral as we continue to transition during these challenging times.  The institution will monitor and address discriminatory comments or behaviour including on U of T’s online platforms and classrooms. 
+
+In accordance with the Ontario Human Rights Code, no person shall engage in a course of vexatious conduct that is directed at one or more specific individuals, and that is based on the race, ancestry, place of origin, colour, ethnic origin, citizenship, sexual orientation, gender identity, gender expression, age marital status, family status or disability. This includes:   
+
+-	Racial slurs or “jokes” 
+-	Insults due to racial identity  
+-	Online posts of cartoons or pictures, in a workplace or school that degrade persons of a particular racial group  
+-	Name-calling due to race, colour, citizenship, place of origin, ancestry, ethnic background or creed  
+-	Pseudonyms or handles that are inappropriate about ancestry, colour, citizenship, ethnicity, place of origin, race, or religion.  
+
+The University of Toronto’s Equity Offices remain available to students to provide support on equity issues that arise as a result of COVID-19. 
+
+Students are encouraged to support one another and the University’s commitment to human rights and our values of diversity, inclusion, and respect in managing any inappropriate comments or disruptive behaviours. If you experience or witness inappropriate comments or behaviours in your classes, you are encouraged to contact your instructor. If you can, take and share a screenshot of the inappropriate content with your instructor so they can follow-up with you and address the conduct.”
+
+## Student Disclosure Process 
+
+The University of Toronto and the Lawrence S. Bloomberg Faculty of Nursing are dedicated to fostering a supportive and safe academic environment in which the learning and scholarship of students may flourish. The safety and well-being of students, including their ability to learn in an environment of professionalism, collegiality, civility and respect are of utmost importance. Students who have witnessed or experienced harassment, discrimination or harmful unprofessionalism can use the Faculty’s disclosure protocol. Students can disclose by either submitting an entry on the confidential [Event Disclosure Form](https://forms.office.com/pages/responsepage.aspx?id=JsKqeAMvTUuQN7RtVsVSEHbrLCvEiOVDsJnZSIG7fANUMUQxVDlPN0o1T0s0VzVXVTlUUkUzU1ZMMC4u&wdLOR=c25A95AA7-58F5-444D-879F-070A77252824) (EDF) or contacting the Faculty’s designated intake officer, Grase Kim, Director, Office of the Dean at grase.kim@utoronto.ca.
+
