--- a/content/evaluation/1-presentation.mdx
+++ b/content/evaluation/1-presentation.mdx
@@ -12,9 +12,9 @@ Students will work in small groups (4 people) to judge the certainty of evidence
 
 Presentations must be posted by noon EST on the Monday of your scheduled week:
 
-- Monday 27th Jan (RCT topic for discussion groups 1, 2, 3)
-- Monday 3rd Feb (Systematic review topic for discussion groups 1, 2, 3)
-- Monday 10th Feb (Non-randomized study of interventions topic for discussion groups 1, 2, 3)
+- Week 4 RCT
+- Week 5 Systematic review
+- Week 6 Non-randomized study of interventions
 
 **25% of final grade**
 
