removed discussion component from group presentation

--- a/content/evaluation/1-presentation.mdx
+++ b/content/evaluation/1-presentation.mdx
@@ -8,7 +8,7 @@ metaDescription: "Assessment 1 for NUR1127"
 
 ### Description
 
-Students will work in small groups (4 people) to judge the certainty of evidence from a research study (using an example article from the syllabus for that week). Students will provide a slide presentation with voiceover (10 minutes maximum, 8-10 slides), to be posted on Voicethread and will facilitate an online discussion. The list of topics and dates for group presentations will be posted the first week of class.
+Students will work in small groups (4 people) to judge the certainty of evidence from a research study (using an example article from the syllabus for that week). Students will provide a slide presentation with voiceover (10 minutes maximum, 8-10 slides). The list of topics and dates for group presentations will be posted the first week of class.
 
 Presentations must be posted by noon EST on the Monday of your scheduled week:
 
